--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.5.4",
-    "bootstrap": "next",
+    "@popperjs/core": "2.6.0",
+    "bootstrap": "5.0.0-beta1",
     "bootswatch": "^4.5.3",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-router-dom": "^5.2.0"
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-router-dom": "5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
